deployment/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: www.rashmidevops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datastore-frontend-svc
                port:
                  number: 80
